# Indicator-Testing-

./: .gitignore  README.md  app.py  pyproject.toml
config/: defaults.yaml
data/: sample_monthly.csv
notebooks/: indicator_tester.ipynb  pandas_indicator_tester.ipynb  smc_indicator_tester.ipynb
outputs/golden/: AD.json  ADX.json  APO.json  ATR.json  BBANDS.json  CCI.json  CDLDOJI.json  CDLHAMMER.json  EMA.json  LINEARREG.json  MACD.json  MOM.json  NATR.json  OBV.json  ROC.json  RSI.json  SMA.json  STDDEV.json  STOCH.json  WILLR.json
scripts/: generate_golden.py  generate_indicator_notebook.py  generate_pandas_indicator_notebook.py  generate_sample_csv.py  generate_smc_indicator_notebook.py
src/indicator_testing/: __init__.py  cli.py  data_loader.py  golden.py  models.py  pandas_indicators.py  pandas_runner.py  plotter.py  registry.py  report.py  runner.py  smc_indicators.py  smc_runner.py  validator.py
tests/: test_data_loader.py  test_golden.py  test_pandas_runner.py  test_runner_smoke.py  test_smc_runner.py
