[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indicator-testing"
version = "0.1.0"
description = "Test TA-Lib indicators one-by-one on monthly OHLC CSV data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "TA-Lib>=0.4.28",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "typer>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
notebook = ["jupyter>=1.0", "ipywidgets>=8.0", "ipykernel>=6.0"]

[project.scripts]
indicator-testing = "indicator_testing.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
